[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/tiles/floor_mossy.png" type="Texture" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/floor_burnt.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/floor.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/wall.png" type="Texture" id=5]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=6]
[ext_resource path="res://scripts/Multiplayer.gd" type="Script" id=7]
[ext_resource path="res://assets/tiles/meta_light.png" type="Texture" id=8]
[ext_resource path="res://assets/light.png" type="Texture" id=9]
[ext_resource path="res://scripts/Game.gd" type="Script" id=10]
[ext_resource path="res://assets/tiles/meta_spawnpoint.png" type="Texture" id=11]
[ext_resource path="res://scripts/Global.gd" type="Script" id=12]
[ext_resource path="res://assets/fonts/Jost-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/MenuBackground.png" type="Texture" id=14]
[ext_resource path="res://assets/Button_Pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Button_Unpressed.png" type="Texture" id=16]
[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=17]
[ext_resource path="res://assets/tiles/missing.png" type="Texture" id=18]
[ext_resource path="res://assets/tiles/meta_light_block.png" type="Texture" id=19]
[ext_resource path="res://assets/tiles/void.png" type="Texture" id=20]
[ext_resource path="res://assets/tiles/meta.png" type="Texture" id=21]
[ext_resource path="res://assets/tiles/meta_clip.png" type="Texture" id=22]
[ext_resource path="res://assets/tiles/meta_kill.png" type="Texture" id=23]
[ext_resource path="res://assets/tiles/meta_spawnpoint_enemy.png" type="Texture" id=24]
[ext_resource path="res://assets/fonts/Jost-SemiBold.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://assets/Health_Progress.png" type="Texture" id=26]
[ext_resource path="res://scripts/TextureProgress.gd" type="Script" id=27]
[ext_resource path="res://assets/Health_Bkg.png" type="Texture" id=29]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=3]
0/name = "missing.png 0"
0/texture = ExtResource( 18 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "void.png 1"
1/texture = ExtResource( 20 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "meta.png 2"
2/texture = ExtResource( 21 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "meta_light.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "meta_light_block.png 4"
4/texture = ExtResource( 19 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "meta_clip.png 5"
5/texture = ExtResource( 22 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "meta_kill.png 6"
6/texture = ExtResource( 23 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "meta_spawnpoint.png 7"
7/texture = ExtResource( 11 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "meta_spawnpoint_enemy.png 8"
8/texture = ExtResource( 24 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "floor.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "wall.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/occluder = SubResource( 1 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 2 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "floor_burnt.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "floor_mossy.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.4334, 12.6273 )

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 25 )

[node name="Game" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -1, 10, 0, -65536, 10, 0, -65535, 10, 0, -65534, 10, 0, -65533, 10, 0, -65532, 9, 0, -65531, 9, 0, -65530, 10, 0, -65529, 10, 0, -65528, 10, 0, -65527, 10, 0, -65526, 10, 0, -65525, 10, 0, -65524, 10, 0, -65523, 10, 0, 65535, 10, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 10, 0, 131071, 10, 0, 65536, 9, 0, 65537, 9, 0, 65538, 9, 0, 65539, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 10, 0, 196606, 1, 0, 196607, 10, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131085, 10, 0, 262143, 10, 0, 196608, 9, 0, 196609, 9, 0, 196610, 9, 0, 196611, 9, 0, 196612, 9, 0, 196613, 9, 0, 196614, 9, 0, 196615, 9, 0, 196616, 9, 0, 196617, 9, 0, 196618, 9, 0, 196619, 9, 0, 196620, 9, 0, 196621, 10, 0, 327679, 10, 0, 262144, 9, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 9, 0, 262156, 9, 0, 262157, 10, 0, 393215, 10, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, 327693, 10, 0, 458750, 10, 0, 458751, 10, 0, 393216, 9, 0, 393217, 9, 0, 393218, 9, 0, 393219, 9, 0, 393220, 9, 0, 393221, 9, 0, 393222, 9, 0, 393223, 9, 0, 393224, 9, 0, 393225, 9, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393229, 10, 0, 524286, 10, 0, 524287, 9, 0, 458752, 9, 0, 458753, 9, 0, 458754, 9, 0, 458755, 9, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 9, 0, 458761, 9, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 10, 0, 589822, 10, 0, 589823, 9, 0, 524288, 9, 0, 524289, 9, 0, 524290, 9, 0, 524291, 9, 0, 524292, 9, 0, 524293, 9, 0, 524294, 9, 0, 524295, 9, 0, 524296, 9, 0, 524297, 9, 0, 524298, 9, 0, 524299, 9, 0, 524300, 9, 0, 524301, 10, 0, 655358, 10, 0, 655359, 9, 0, 589824, 9, 0, 589825, 9, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 9, 0, 589833, 9, 0, 589834, 9, 0, 589835, 9, 0, 589836, 9, 0, 589837, 10, 0, 720894, 10, 0, 720895, 9, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 10, 0, 655374, 1, 0, 786430, 10, 0, 786431, 10, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 10, 0, 720910, 1, 0, 851967, 10, 0, 786432, 9, 0, 786433, 9, 0, 786434, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 10, 0, 786446, 1, 0, 917503, 10, 0, 851968, 9, 0, 851969, 9, 0, 851970, 9, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851975, 9, 0, 851976, 9, 0, 851977, 9, 0, 851978, 9, 0, 851979, 9, 0, 851980, 9, 0, 851981, 10, 0, 851982, 1, 0, 983039, 10, 0, 917504, 9, 0, 917505, 9, 0, 917506, 9, 0, 917507, 9, 0, 917508, 9, 0, 917509, 9, 0, 917510, 9, 0, 917511, 9, 0, 917512, 9, 0, 917513, 9, 0, 917514, 9, 0, 917515, 9, 0, 917516, 9, 0, 917517, 10, 0, 917518, 1, 0, 1048575, 10, 0, 983040, 10, 0, 983041, 10, 0, 983042, 10, 0, 983043, 9, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 9, 0, 983049, 9, 0, 983050, 9, 0, 983051, 9, 0, 983052, 9, 0, 983053, 10, 0, 1048576, 1, 0, 1048578, 10, 0, 1048579, 10, 0, 1048580, 10, 0, 1048583, 10, 0, 1048584, 10, 0, 1048585, 10, 0, 1048586, 10, 0, 1048587, 10, 0, 1048588, 10, 0, 1048589, 10, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1179661, 10, 0, 1245197, 10, 0, 1310733, 10, 0 )

[node name="EnemyDevSpawn" type="Position2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 128, 128 )
script = ExtResource( 6 )
speed = 350

[node name="Player" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 16, 16 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D/Player"]
current = true

[node name="Light2D" type="Light2D" parent="KinematicBody2D/Player"]
position = Vector2( 0.18921, 0 )
texture = ExtResource( 9 )
color = Color( 1, 0.843137, 0.513726, 1 )
shadow_enabled = true
shadow_gradient_length = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 16, 16 )
shape = SubResource( 4 )

[node name="Hit" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Hit"]
shape = SubResource( 5 )

[node name="BulletSpawn" type="Position2D" parent="KinematicBody2D"]
position = Vector2( 16, 32 )
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="KinematicBody2D/BulletSpawn"]
scale = Vector2( 0.163953, 0.293907 )
texture = ExtResource( 26 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 17 )

[node name="Debug" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -190.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="position_text" type="Label" parent="CanvasLayer/Debug"]
margin_right = 56.0
margin_bottom = 14.0
text = "Position:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_text" type="Label" parent="CanvasLayer/Debug"]
margin_left = 0.864838
margin_top = 26.7933
margin_right = 56.8648
margin_bottom = 40.7933
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rawposition_text" type="Label" parent="CanvasLayer/Debug"]
margin_top = 14.0
margin_right = 85.0
margin_bottom = 28.0
text = "Raw Position:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity_text" type="Label" parent="CanvasLayer/Debug"]
margin_left = 2.38523
margin_top = 40.8421
margin_right = 61.3852
margin_bottom = 54.8421
rect_pivot_offset = Vector2( 45.1321, -34.5946 )
text = "Velocity: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="latency_text" type="Label" parent="CanvasLayer/Debug"]
margin_left = 1.59778
margin_top = 82.262
margin_right = 60.5978
margin_bottom = 96.262
rect_pivot_offset = Vector2( 36.6277, 1.84822 )
text = "Latency:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_text" type="Label" parent="CanvasLayer/Debug"]
margin_left = 3.51
margin_top = 110.0
margin_right = 98.51
margin_bottom = 124.0
rect_pivot_offset = Vector2( 36.6277, 1.84822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connected_text" type="Label" parent="CanvasLayer/Debug"]
margin_left = 1.75527
margin_top = 68.2454
margin_right = 96.7553
margin_bottom = 82.2454
rect_pivot_offset = Vector2( 36.6277, 1.84822 )
text = "Not Connected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="Control" parent="CanvasLayer"]
anchor_top = 0.743
anchor_right = 0.31
anchor_bottom = 1.0
margin_top = -534.96
margin_right = -346.8
margin_bottom = -670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="RichTextLabel" parent="CanvasLayer/Chat"]
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="TextEdit" parent="CanvasLayer/Chat"]
margin_top = 690.0
margin_right = 227.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="CanvasLayer/Chat"]
margin_left = 227.0
margin_top = 689.0
margin_right = 299.0
margin_bottom = 719.0
custom_fonts/font = SubResource( 6 )
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Control" parent="CanvasLayer/HUD"]
visible = false
anchor_left = 0.409
anchor_top = 0.417
anchor_right = 0.626
anchor_bottom = 0.662
margin_left = -0.402069
margin_top = -0.0657196
margin_right = 0.389893
margin_bottom = -0.0657654
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HUD/Loading"]
margin_right = 223.0
margin_bottom = 147.0
color = Color( 0, 0, 0, 0.529412 )

[node name="Label" type="Label" parent="CanvasLayer/HUD/Loading"]
anchor_left = 0.326
anchor_right = 0.658
anchor_bottom = 0.163
margin_left = -0.0300598
margin_right = -0.0660706
margin_bottom = 0.0390015
custom_fonts/font = SubResource( 7 )
text = "LOADING"

[node name="HealthBar" type="Control" parent="CanvasLayer/HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/HUD/HealthBar"]
margin_left = 20.0
margin_top = 20.0
margin_right = 452.0
margin_bottom = 80.0
value = 100.0
texture_under = ExtResource( 29 )
texture_progress = ExtResource( 26 )
nine_patch_stretch = true
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" type="Control" parent="CanvasLayer"]
visible = false
margin_left = 412.0
margin_top = 200.0
margin_right = 452.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameMenu"]
margin_left = -412.0
margin_top = -200.0
margin_right = 612.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/GameMenu"]
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 14 )
region_rect = Rect2( 500, 500, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameMenu"]
margin_right = 200.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Game Menu"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 18.0

[node name="Resume" type="TextureButton" parent="CanvasLayer/GameMenu/VBoxContainer"]
margin_left = 50.0
margin_top = 22.0
margin_right = 150.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )

[node name="Label" type="Label" parent="CanvasLayer/GameMenu/VBoxContainer/Resume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -15.5
margin_right = 50.0
margin_bottom = 15.5
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="CanvasLayer/GameMenu/VBoxContainer"]
margin_left = 50.0
margin_top = 56.0
margin_right = 150.0
margin_bottom = 86.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )

[node name="Label" type="Label" parent="CanvasLayer/GameMenu/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_to_menu" type="TextureButton" parent="CanvasLayer/GameMenu/VBoxContainer"]
margin_left = 50.0
margin_top = 90.0
margin_right = 150.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )

[node name="Label" type="Label" parent="CanvasLayer/GameMenu/VBoxContainer/Exit_to_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Exit to Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.329412, 0.32549, 0.32549, 1 )

[node name="Players" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Global" type="Node" parent="."]
script = ExtResource( 12 )

[connection signal="PlayerHealthChanged" from="KinematicBody2D" to="CanvasLayer/HUD/HealthBar/TextureProgress" method="_on_KinematicBody2D_PlayerHealthChanged"]
[connection signal="area_entered" from="KinematicBody2D/Hit" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="pressed" from="CanvasLayer/Chat/Send" to="Players" method="_on_Send_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenu/VBoxContainer/Resume" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenu/VBoxContainer/Options" to="CanvasLayer" method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenu/VBoxContainer/Exit_to_menu" to="CanvasLayer" method="_on_Exit_to_menu_pressed"]
